# mujoco_ros2_control

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MUJOCO_LOG.TXT  README.md  package.xml  paper.bib  paper.md  run_docker_gui.sh
.github/workflows/: ci-examples.yml  ci.yml  draft-pdf.yml
examples/franka_mujoco/config/: franka_controllers.yaml
examples/franka_mujoco/launch/: franka.launch.py
examples/franka_mujoco/urdf/: franka.urdf.xacro  mujoco_camera.urdf.xacro  ros2_control.urdf.xacro
examples/task_table_mujoco/urdf/: task_table.urdf.xacro
examples/unitree_h1_mujoco/: CMakeLists.txt  package.xml
examples/unitree_h1_mujoco/config/: unitree_h1_controllers.yaml
examples/ur_mujoco/: CMakeLists.txt  README.md  package.xml
examples/ur_mujoco/config/: ur_controllers.yaml
examples/ur_mujoco/launch/: ur.launch.py
examples/ur_mujoco/urdf/: ros2_control.urdf.xacro  ur.urdf.xacro
mujoco_ros2_control/: .clang-uml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  compile_commands.json  mujoco_hardware_plugins.xml  package.xml
mujoco_ros2_control/include/mujoco_gl_lidar/: mujoco_gl_lidar.hpp
mujoco_ros2_control/include/mujoco_rgbd_camera/: mujoco_depth_camera.hpp
mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_depth_camera.hpp  mujoco_resource_manager.hpp  mujoco_ros2_control_plugin.hpp  mujoco_sensors.hpp  mujoco_system.hpp  mujoco_system_interface.hpp  mujoco_visualization.hpp  mujoco_visualization_utils.hpp
mujoco_ros2_control/include/mujoco_ros2_control_simulate_gui/: simulate_gui.hpp
mujoco_ros2_control/include/mujoco_ros2_sensors/: imu_sensor.hpp  mujoco_ros2_sensors.hpp  pose_sensor.hpp  wrench_sensor.hpp
mujoco_ros2_control/include/mujoco_visualization/: mujoco_visualization.hpp  simulate_gui.hpp
mujoco_ros2_control/libsimulate/: CMakeLists.txt  glfw_adapter.cc  glfw_adapter.h  simulate.cc
mujoco_ros2_control/scripts/: add_actuators.py  run_coacd.py  urdf2mjcf.py  xacro2mjcf.py  xacro2mjcf.sh  xacro2mjcf_multi.py  xacro2mjcf_node.py
mujoco_ros2_control/src/: mujoco_depth_camera.cpp  mujoco_gl_lidar.cpp  mujoco_gl_lidar_parameters.yaml  mujoco_rgbd_camera_parameters.yaml  mujoco_ros2_control_plugin.cpp  mujoco_ros2_sensors.cpp  mujoco_sensors.cpp  mujoco_system.cpp  mujoco_visualization.cpp  mujoco_visualization_utils.cpp  pose_sensor.cpp  simulate_gui.cpp  wrench_sensor.cpp
mujoco_ros2_control/test/: simple_launch.test.py  test_multi_urdf.test.py  test_pose_rigid.test.py  test_sensors_unit.py
mujoco_ros2_control/test/data/: double_pendulum.urdf.xacro  double_pendulum_camera_params.yaml  double_pendulum_controllers.yaml  double_pendulum_lidar_params.yaml  test_pose_rigid.urdf.xacro  test_pose_rigid_controllers.yaml
mujoco_ros2_control_examples/: CMakeLists.txt  README.md  package.xml
mujoco_ros2_control_examples/config/franka/: franka_controllers.yaml
mujoco_ros2_control_examples/config/unitree_h1/: unitree_h1_controllers.yaml
mujoco_ros2_control_examples/launch/: franka.launch.py  unitree_h1.launch.py  ur.launch.py
mujoco_ros2_control_examples/patches/: unitree_h1.urdf.patch
mujoco_ros2_control_examples/test/: example_smoke.py  test_franka_example.test.py  test_unitree_h1_example.test.py  test_ur_example.test.py
mujoco_ros2_control_examples/urdf/franka/: franka.urdf.xacro  ros2_control.urdf.xacro
mujoco_ros2_control_examples/urdf/task_table/: task_table.urdf.xacro
mujoco_ros2_control_examples/urdf/unitree_h1/: mujoco_actuators.urdf.xacro  ros2_control.urdf.xacro  unitree_h1.urdf.xacro
mujoco_ros2_control_examples/urdf/ur/: mujoco_actuators.urdf.xacro  ur.urdf.xacro
mujoco_ros2_control_simulate_gui/: .gitignore  CMakeLists.txt  package.xml
mujoco_ros2_control_simulate_gui/include/mujoco_ros2_control_simulate_gui/: simulate_gui.hpp
mujoco_ros2_control_simulate_gui/libsimulate/: CMakeLists.txt  platform_ui_adapter.h
mujoco_ros2_control_simulate_gui/src/: simulate_gui.cpp
mujoco_ros2_msgs/: CMakeLists.txt  package.xml
panda_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit2/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml  servo.yml
panda_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
panda_mujoco/: CMakeLists.txt  README.md  package.xml
panda_mujoco/config/: controllers.yaml  controllers_cartesian_impedance_controller.yaml  controllers_effort.yaml  controllers_effort_dual.yaml  controllers_joint_trajectory_controller.yaml  controllers_joint_trajectory_controller_dual_panda.yaml  panda.gazebo  panda.mujoco  panda.urdf  panda.urdf.xacro  xacro2mjcf.conf
panda_mujoco/launch/: gazebo.launch.py  mujoco.launch.py  mujoco_dual_panda.launch.py
panda_mujoco/rviz/: config_file.rviz  panda.rviz  rviz.conf.rviz
panda_mujoco/urdf/: box.urdf  dual_panda.mujoco  dual_panda.urdf.xacro  multi_panda.urdf.xacro  panda.mujoco  panda.urdf  panda.urdf.xacro  panda.xml  panda_scene.xml  table.urdf.xacro  table2.urdf
panda_simulation/: CMakeLists.txt  package.xml
panda_simulation/config/: controllers.yaml  controllers_joint_trajectory_controller.yaml  panda.gazebo  panda.mujoco
panda_simulation/launch/: gazebo.launch.py  gazebo_moveit.launch.py  mujoco.launch.py  mujoco_moveit.launch.py  mujoco_servo.launch.py
panda_simulation/meshes/mujoco/visual/: table.stl
panda_simulation/meshes/visual/: USB_Female.stl
panda_simulation/mjcf/: panda.xml
panda_simulation/urdf/: USB_Female.urdf.xacro  USB_Male.urdf.xacro  box.urdf  panda.urdf.xacro  table.urdf  table.urdf.xacro  table2.urdf
panda_simulation/urdf/include/: panda.ros2_control  panda.urdf.xacro  panda_arm.xacro  panda_gripper.xacro  panda_utils.xacro
panda_simulation/urdf/realsense_d415/: _d415.urdf.xacro
panda_simulation/world/: no_gravity.sdf
paper/: compile.sh  latex.template  paper.bib  paper.md  paper.tex
(+8 files in other folders)
