<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_ros2_control</name>
  <version>1.0.0</version>
  <description>mujoco_ros2_control</description>
  <maintainer email="adrian.danzglock@dfki.de">Adrian Danzglock</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>

  <depend>urdf</depend>

  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <!-- <depend>mujoco</depend> -->
  <depend>libglfw3-dev</depend>
  <depend>vision_opencv</depend>
  <depend>perception_pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>realsense2_description</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <test_depend>effort_controllers</test_depend>
  <test_depend>imu_sensor_broadcaster</test_depend>
  <test_depend>force_torque_sensor_broadcaster</test_depend>
  <test_depend>pose_broadcaster</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mujoco_ros2_control plugin="${prefix}/mujoco_hardware_plugins.xml"/>
  </export>
</package>
