<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_ros2_control_simulate_gui</name>
  <version>1.0.0</version>
  <description>simulate gui for mujoco_ros2_control</description>
  <maintainer email="adrian.danzglock@dfki.de">Adrian Danzglock</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco</depend>
  <depend>glfw3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
